k8s/k8singressrule/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: ingress-apigateway
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api.oxygen-eshopsample.com
    http:
      paths:
      - path: /
        backend:
          serviceName: apigateway
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: ingress-frontend
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.oxygen-eshopsample.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
